Nested collapsables on template editor fixed

--- a/vue/src/sass/lists.scss
+++ b/vue/src/sass/lists.scss
@@ -16,3 +16,11 @@
     }
   }
 }
+
+.dvs-open {
+  > .dvs-collapsable {
+    > .dvs-collapsed {
+      @apply dvs-block dvs-h-auto dvs-opacity-100;
+    }
+  }
+}
